# coalesce

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: project-source.cmake
src/: mainwindow.cpp  mainwindow.h
src/api/native/: winevent.cpp  winevent.h
src/cmn/: common.h  constant.h  resource.h  snippet.h
src/cmpnt/: ctrltab.cpp  ctrltab.h  navtab.cpp  navtab.h
src/cmpnt/framelesswindow/: framelesswindow.cpp  framelesswindow.h
src/cmpnt/iconbtn/: iconbtn.cpp  iconbtn.h
src/layout/: ctrltab.cpp  ctrltab.h  navtab.cpp  navtab.h  topbar.cpp  topbar.h
src/layout/coalescewindow/: coalescewindow.cpp  coalescewindow.h
src/layout/winctrl/: winctrltype.h  windowctrl.cpp  windowctrl.h
static/: resources.qrc
